# femrs

./: .gitignore  Cargo.toml  README.md
input/mesh/: large_mesh_test.txt
src/: main.rs
src/assemble/: assembly.rs  write_data.rs
src/elements/: element_interfaces.rs
src/elements/element_library/: hypercube_elements.rs
src/elements/parametric_topology_element/: determinant_and_adjugate.rs  integrate_elements.rs  mass_matrices.rs  position_jacobian.rs
src/elements/parametric_topology_element/elastic_force_matrices/: all_force_orders_parametric_expansion.rs
src/elements/quadrature/: quadrature_rules.rs
src/fem/: assembly.rs
src/fem/elements/parametric_topology_element/: determinant_and_adjugate.rs
src/fem/elements/parametric_topology_element/elastic_force_matrices/: parametric_expansion_with_recursion.rs
src/fem/elements/quadrature/: quadrature_rules.rs
src/mesh/: hypernode.rs  locate_nodes_o_log_n.rs  locate_nodes_o_n.rs  node_coordinates.rs  node_coordinates_ndarray.rs
src/read_mesh/: locate_nodes_o_log_n.rs
