[package]
name = "femrs"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
tempfile = "3.21.0"
scirs2-sparse = { git = "https://github.com/tiagomrns/scirs", package = "scirs2-sparse" }
num-integer = "0.1.46"
itertools = "0.14.0"
ndarray = "0.16.1"
memmap2 = "0.9.8"
